# site2context

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REAMDE.md  consolidate_md.py  convert_site.py  generate_config.py  html2md.py  my_site_config.yaml  pyproject.toml  requirements.txt  test_config.yaml
docs/: html-to-markdown-user-stories.md
html2md/: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml  setup.py
html2md/docs/: html-to-markdown-prd.md
html2md/examples/: example_config.yaml
html2md/html2md/: __init__.py  cli.py  config.py  core.py  exceptions.py
html2md/src/html2md/: __init__.py  __main__.py  config.py  consolidate.py
html2md/src/html2md/cli/: __init__.py  main.py
html2md/tests/: test_core.py
markdown_output/test_site/: index.md
markdown_output/test_site/blog/: index.md
markdown_output/test_site/blog/categories/business/: index.md
markdown_output/test_site/blog/categories/tech/: index.md
src/html2md/: __main__.py  config.py  consolidate.py  core.py
src/html2md/cli/: main.py
test_html_files/test_site/: index.html
test_html_files/test_site/blog/categories/business/: index.html
tests/test_html_files/test_site/blog/: index.html
tests/test_html_files/test_site/blog/categories/tech/: index.html
